--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,38 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+
+    <!-- Required meta tags -->
+
+    <!-- Bootstrap CSS -->
+
+
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style1.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='design.css') }}" />
 {% if user %}
-    <title>Welcome to {{ user.username }}'s Homepage</title>
-</head>
-<body>
+    <title>Welcome to {{ user.username }}'s site</title>
+    {% else %}
+    <title>Welcome to My Site!</title>
+    {% endif %}
+<head>
+ <body>
 <!-- As a heading -->
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">{% if user %}{{ user.username }}'s Homepage{% else %}
-            <title>Welcome to My Homepage</title>
-            {% endif %}
-        </a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">{% if user %}{{ user.username }}'s Homepage{% else %}
+    <title>Welcome to My Homepage</title>
+    {% endif %}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-        <li class="nav-item active">
+      <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" href="api/cities">Cities API JSON endpoint <span class="sr-only">(current)</span></a>
-        </li>
+      </li>
 
     </ul>
   </div>
-    </nav>
+</nav>
 <main role="main" class="container">{% block content %}{% endblock %}</main>
     <div id="footer">
 <!-- Optional JavaScript -->
@@ -47,6 +55,5 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     </div>
-© 2020 Ssempax, Inc
 </body>
 </html>
